# ib-practica12-oop-gtests-exercism-Saul-Sosa-Diaz

Complejos/: CMakeLists.txt
Complejos/src/: complejo.cc  complejo.h  complejos.cc
Complejos/test/: test_operator*.cc  test_operator+.cc  test_operator-.cc
fechas/: CMakeLists.txt
fechas/src/: fecha.cc  fecha.h  fechas.cc
fechas/test/: test_IsBisiesto.cc  test_operator<.cc
modificacion/src/: complejo.cc  complejo.h  complejos.cc
modificacion/test/: test_operator+.cc  test_operator-.cc
